Better mobile sizing

--- a/less/narrow.less
+++ b/less/narrow.less
@@ -1,6 +1,10 @@
 @title_text_size: 32px;
 @menu_text_size:  24px;
 
+body {
+    min-width: 350px;
+}
+
 #column_container {
     max-width: none !important;
 }
@@ -53,7 +57,5 @@
 }
 
 #expense_form {
-    & > div {
-        display: inline;
-    }
+    font-size: 100%;
 }
