Font size and more eliding

--- a/less/style.less
+++ b/less/style.less
@@ -364,12 +364,17 @@ table.summary {
         margin-top: 0.50em;
     }
 
+    & > div {
+        .elide;
+    }
+
     .description {
         .elide;
         width: 65%;
     }
 
     .share_value {
+        .elide;
         width: 35%;
         text-align: right;
     }
