Menu icon floats right now

--- a/less/style.less
+++ b/less/style.less
@@ -541,6 +541,14 @@ button {
     }
 }
 
+#nav_toggle_icon_parent {
+    float: right;
+}
+
+#nav_toggle_text {
+    float: left;
+}
+
 .button_group {
     text-align: center;
 
