--- a/less/wide.less
+++ b/less/wide.less
@@ -2,6 +2,8 @@
     position: fixed;
     width: @sidebar_size;
 
+    border-right: 1px solid fade(black, 10%);
+
     top:    0px;
     left:   0px;
     bottom: 0px;
