--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,171 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>$ sharing</title>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.1/underscore-min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/knockout/2.3.0/knockout-min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>-->
-        <!-- <script src="js/css-reloader.js"></script>-->
-        <script src="js/util.js"></script>
-        <script src="js/ExpenseForm.js"></script>
-        <script src="js/Root.js"></script>
-        <script src="js/main.js"></script>
-        <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css">-->
-        <link rel="stylesheet" href="css/style.css">
+        <%- include _head.ejs %>
     </head>
     <body>
-        <div id="navigation">
-            <div id="title"><i>$</i> sharing</div>
-            <a id="nav_toggle" href="#" data-bind="event: { click: toggleObservable.bind(null, menuVisible) }">
-                <!-- <span id="nav_toggle_icon"><img src="/img/menu.svg"></span>-->
-                <span id="nav_toggle_text">
-                    <i>$</i> sharing
-                </span>
-                <span id="nav_toggle_icon_parent">
-                    <i id="nav_toggle_icon" class="icon-menu"></i>
-                </span>
-                <span class="clearfix"></span>
-            </a>
-            <span id="main_menu" data-bind="css: { menu_collapsed: menuVisible }">
-                <a id="expenses_tab" class="tab" data-bind="css: { selected: currentTab() === 'expenses' }, event: { click: currentTab.bind(null, 'expenses') }" href="#expenses">Expenses</a>
-                <a id="payments_tab" class="tab" data-bind="css: { selected: currentTab() === 'payments' }, event: { click: currentTab.bind(null, 'payments') }" href="#payments">Payments</a>
-                <a id="debts_tab"    class="tab" data-bind="css: { selected: currentTab() === 'debts'    }, event: { click: currentTab.bind(null, 'debts') }"    href="#debts">Debts</a>
-            </span>
-            <span class="clearfix"></span>
-        </div>
+        <%- include _navigation.ejs %>
         <div id="column_container">
-            <div id="debts" class="column" data-bind="
-                visible: currentTab() === 'debts',
-                foreach: []"
-                >
-                debts
-            </div>
-            <div id="expenses" class="column" data-bind="visible: $root.currentTab() === 'expenses'">
-                <button
-                    type="button"
-                    class="form_toggle"
-                    id="new_expense_show"
-                    data-bind="
-                    visible: tempExpenseForm().notVisibile,
-                    click: $root.newExpenseForm"
-                    >
-                    <i class="icon-plus"></i> add expense&hellip;
-                </button>
-                <form
-                    action=""
-                    id="expense_form"
-                    class="floaty_container"
-                    data-bind="
-                    with: tempExpenseForm,
-                    submit: saveTempExpense,
-                    visible: tempExpenseForm().visible"
-                    >
-                    <div class="field">
-                        <span class="trivial_word">who</span>
-                        <select data-bind="
-                            options: $root.normalPeople,
-                            optionsText: 'name',
-                            optionsValue: 'id',
-                            value: $root.currentUser
-                            "></select>
-                    </div>
-                    <div class="field">
-                        <span class="trivial_word">what</span>
-                        <input id="price_field" class="price" type="text" min="1" max="9999" step="1" placeholder="$" data-bind="value: price">
-                    </div>
-                    <div class="field">
-                        <span class="trivial_word">whom</span>
-                        <select data-bind="
-                            options: $root.everyoneButMe,
-                            optionsText: 'name',
-                            optionsValue: 'id',
-                            value: spendTarget
-                            "></select>
-                    </div>
-                    <div class="field">
-                        <span class="trivial_word">when</span>
-                        <div class="date_group">
-                            <select data-bind="options: months, value: selectedMonth"></select>
-                            <span class="trivial_word">/</span>
-                            <select data-bind="options: days,   value: selectedDay"></select>
-                            <span class="trivial_word">/</span>
-                            <select data-bind="options: years,  value: selectedYear"></select>
-                        </div>
-                    </div class="field">
-                    <div class="field">
-                        <!-- <span class="trivial_word">to pay for</span>-->
-                        <span class="trivial_word">why</span>
-                        <input
-                        id="new_expense_description"
-                        class="description"
-                        type="text"
-                        placeholder="groceries, bills, etc."
-                        data-bind="value: description">
-                    </div>
-                    <div class="button_group">
-                        <button class="add" type="submit"><i class="icon-plus"></i> Add</button>
-                        <button class="cancel" data-bind="event: { click: hide }" type="button"><i class="icon-close"></i> Cancel</button>
-                    </div>
-                </form>
-                <div id="expense_group" data-bind="foreach: expenses">
-                    <div class="expense_item" data-bind="css: 'color_' + payer">
-                        <div>
-                            <span class="money"><span data-bind="text: formattedCurrency(amount)"></span></span>
-                            <span class="trivial_word">on</span>
-                            <span data-bind="text: formattedDate(date)"></span>
-                            <span class="trivial_word">by</span>
-                            <span class="payer" data-bind="css: 'color_' + payer, text: $root.nameForId(payer)"></span>
-                            <span data-bind="visible: spent_for !== 1">
-                                <span class="trivial_word">for</span>
-                                <span class="spent_for" data-bind="css: 'color_' + spent_for, text: $root.nameForId(spent_for)"></span>
-                            </span>
-                        </div>
-                        <div>
-                            <span class="description" data-bind="text: description"></span
-                            ><span class="share_value" data-bind="visible: spent_for === 1">
-                                <span class="money" data-bind="text: formattedCurrency(amount / $root.numberOfPeople())"></span>
-                                <span class="trivial_word">each</span>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="payments" class="column" data-bind="visible: currentTab() === 'payments'">
-                <button
-                    type="button"
-                    class="form_toggle"
-                    id="new_payment_show"
-                    data-bind="
-                    visible: true,
-                    click: noop"
-                    >
-                    <i class="icon-plus"></i> add payment&hellip;
-                </button>
-                <form
-                    action=""
-                    id="expense_form"
-                    class="floaty_container"
-                    data-bind="
-                    with: {},
-                    submit: noop,
-                    visible: true"
-                    >
-                    <div class="field">
-                        <span class="trivial_word">spam</span>
-                        <input
-                        type="text"
-                        placeholder="spam, spam, spam"
-                        data-bind="value: ''">
-                    </div>
-                    <div class="button_group">
-                        <button class="add" type="submit"><i class="icon-plus"></i> Add</button>
-                        <button class="cancel" type="button"><i class="icon-close"></i> Cancel</button>
-                    </div>
-                </form>
-            </div>
+            <%- include _debts.ejs %>
+            <%- include _expenses.ejs %>
+            <%- include _payments.ejs %>
         </div>
     </body>
 </html>
