Using EJS loop now

--- a/less/style.less
+++ b/less/style.less
@@ -163,6 +163,7 @@ i {
 
         &.tab {
             color: @header_fg;
+            text-transform: capitalize;
         }
 
         padding: 10px;
