Debts screen and URL fragment

--- a/less/people.less
+++ b/less/people.less
@@ -19,6 +19,7 @@
             background: fade(@@color, 20%);
             font-weight: bold;
             .round(2px);
+            display: inline-block;
         }
 
         &.true {
