--- a/views/_payments.ejs
+++ b/views/_payments.ejs
@@ -10,8 +10,7 @@
         <i class="icon-plus"></i> add payment&hellip;
     </button>
     <form
-        action=""
-        id="expense_form"
+        action="/"
         class="floaty_container"
         data-bind="
         with: {},
