--- a/views/_debts.ejs
+++ b/views/_debts.ejs
@@ -5,7 +5,7 @@
                 <tr class="debt">
                     <td class="money" data-bind="text: formattedCurrency(amount)"></td>
                     <td>
-                        <span class="payee" data-bind="css: 'color_' + from, text: $root.nameForId(from)"></span>
+                        <span class="payer" data-bind="css: 'color_' + from, text: $root.nameForId(from)"></span>
                         <span class="trivial_word">&rarr;</span>
                         <span class="payee" data-bind="css: 'color_' + to, text: $root.nameForId(to)"></span>
                     </td>
