--- a/views/_head.ejs
+++ b/views/_head.ejs
@@ -6,6 +6,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="js/util.js"></script>
 <script src="js/ExpenseForm.js"></script>
+<script src="js/PaymentForm.js"></script>
 <script src="js/Root.js"></script>
 <script src="js/main.js"></script>
 <link rel="stylesheet" href="css/style.css">
