Just need to make payments form

--- a/views/_expenses.ejs
+++ b/views/_expenses.ejs
@@ -4,7 +4,7 @@
         class="form_toggle"
         id="new_expense_show"
         data-bind="
-        visible: tempExpenseForm().notVisibile,
+        visible: tempExpenseForm().notVisible,
         click: newExpenseForm"
         >
         <i class="icon-plus"></i> add expense&hellip;
