--- a/views/_head.ejs
+++ b/views/_head.ejs
@@ -5,6 +5,8 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/knockout/2.3.0/knockout-min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="js/util.js"></script>
+<script src="js/DateMixin.js"></script>
+<script src="js/VisibilityMixin.js"></script>
 <script src="js/ExpenseForm.js"></script>
 <script src="js/PaymentForm.js"></script>
 <script src="js/Root.js"></script>
