--- a/less/narrow.less
+++ b/less/narrow.less
@@ -2,8 +2,8 @@
 @menu_text_size:  24px;
 // @header_bg: darken(@bg, 6%);
 // @header_fg: #222222;
-@header_bg: @bg;
-@header_fg: #222222;
+@title_bg: @bg;
+@title_fg: #222222;
 
 body {
     min-width: 350px;
@@ -24,8 +24,7 @@ body {
 }
 
 #main_menu {
-    // border: 3px solid fade(black, 50%);
-    border: 3px solid fade(white, 80%);
+    border: 1px solid darken(@menu_bg, 5%);
     border-left-width:  0px;
     border-right-width: 0px;
     display: block;
@@ -34,8 +33,8 @@ body {
 #nav_toggle {
     font-size: @title_text_size;
 
-    background: @header_bg;
-    color:      @header_fg;
+    background: @title_bg;
+    color:      @title_fg;
 
     // border-bottom: 1px solid fade(black, 10%);
 
@@ -60,8 +59,14 @@ body {
 }
 
 #navigation {
-    .tab {
+    div.tab,
+    a.tab {
         font-size: @menu_text_size;
+        border-bottom: 1px solid @menu_separator_color;
+
+        &:last-child {
+            border-bottom-width: 0px;
+        }
     }
 }
 
